# landmark-detection

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: Extract Face Landmarks.ipynb  Extract Pose Landmarks.ipynb
src/neurobooth/: face_landmarks.py  pose_landmarks.py
